@@ -55,4 +55,6 @@
   <li>Jos&eacute; Castro</li>
   <li>Alexandra Gershman</li>
   <li>Phillip Smith</li>
+  <li>Jerry Franz</li>
+  <li>Alexey Sheynuk</li>
 </ul>
